# automizer

./: .gitignore  Agents.md  NORMALIZATION_MODULE.md  README.md  functional_requirements.md  macros.json  main.py  pyproject.toml
config/: default.yaml
macros/: README.md  auto_join_raids.py  example_macro.py
presets/: .gitkeep  README.md  presets.json  screenshot_presets.json
src/: __init__.py  cli.py  config.py  window_manager.py  window_manager_stub.py
src/cv/: __init__.py
src/macro/: ACTIONS_README.md  __init__.py  actions.py
src/macro/macros/: auto_join_raids.py  example_actions_macro.py
src/macros/: __init__.py  executor.py  storage.py
src/normalizer/: __init__.py
src/screenshot/: __init__.py  presets.py
src/storage/: __init__.py
src/ui/: __init__.py  app.py  app_old.py  app_redesigned.py  macro_editor_window.py  macro_widget.py  main_window.py  pyqt_app.py
tests/: test_config.py  test_normalizer.py  test_storage.py
